manifest and service worker for PWA

--- a/src/app.html
+++ b/src/app.html
@@ -3,12 +3,13 @@
   <head>
     <title>KONSERTER</title>
     <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <link rel="icon" href="%sveltekit.assets%/konserter-96.png" />
+    <link rel="manifest" href="%sveltekit.assets%/manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     %sveltekit.head%
   </head>
   <body>
-    <div>%sveltekit.body%</div>
+    %sveltekit.body%
   </body>
 </html>
