--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     %sveltekit.head%
   </head>
-  <body>
-    %sveltekit.body%
-  </body>
+	<body data-sveltekit-prefetch>
+		<div>%sveltekit.body%</div>
+	</body>
 </html>
