--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-		<link rel="icon" href="./static/konserter-96.png" />
-		<link rel="manifest" href="./static/manifest.json" />
+		<link rel="icon" href="./src/static/konserter-96.png" />
+		<link rel="manifest" href="./src/static/manifest.json" />
 		<title>KONSERTER</title>
 	</head>
 	<body>
 		<div id="app"></div>
-		<script type="module" src="/src/main.js"></script>
+		<script type="module" src="./src/main.js"></script>
 	</body>
 </html>
