--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-		<link rel="icon" href="./src/static/konserter-96.png" />
-		<link rel="manifest" href="./src/static/manifest.json" />
+		<link rel="icon" href="/konserter-96.png" />
+		<link rel="manifest" href="/manifest.json" />
 		<title>KONSERTER</title>
 	</head>
 	<body>
