--- a/public/__/auth/iframe/index.html
+++ b/public/__/auth/iframe/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name=viewport content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<script type="text/javascript" src="../iframe.js"></script>
+<script type="text/javascript" src="/__/auth/iframe.js"></script>
 <script type="text/javascript" nonce="firebase-auth-helper">
 fireauth.iframe.AuthRelay.initialize();
 </script>
