--- a/public/__/auth/handler/index.html
+++ b/public/__/auth/handler/index.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-<meta name=viewport content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<script type="text/javascript" src="/__/auth/experiments.js"></script>
-<script type="text/javascript" src="/__/auth/handler.js"></script>
-<script type="text/javascript" nonce="firebase-auth-helper">
-var POST_BODY = '{{POST_BODY}}';
-fireauth.oauthhelper.widget.initialize();
-</script>
-</head>
-<body>
-</body>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<script type="text/javascript" src="/__/auth/experiments.js"></script>
+		<script type="text/javascript" src="/__/auth/handler.js"></script>
+		<script type="text/javascript" nonce="firebase-auth-helper">
+			var POST_BODY = '{{POST_BODY}}'
+			fireauth.oauthhelper.widget.initialize()
+		</script>
+	</head>
+	<body></body>
 </html>
