--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-		<link rel="icon" href="/konserter-96.png" />
-		<link rel="manifest" href="/manifest.json" />
+		<meta charset="UTF-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<link rel="preconnect" href="https://fonts.googleapis.com"/>
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+		<link rel="icon" href="/konserter-96.png"/>
+		<link rel="manifest" href="/manifest.json"/>
 		<title>KONSERTER</title>
 	</head>
 	<body>
 		<div id="app"></div>
-		<script type="module" src="./src/main.js"></script>
+		<script type="module" src="./src/main.js" async></script>
 	</body>
 </html>
